--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CareCorner">
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".ForgotPasswordActivity"></activity>
-        <activity android:name=".ForgotUsernameActivity"></activity>
-        <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".ResourceActivity"></activity>
-
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainMenuActivity"></activity>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".ForgotPasswordActivity" />
+        <activity android:name=".ForgotUsernameActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".ResourceActivity" />
+        <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
