Add ability to save user entered data and use that data in the fake phone call feature
Other updates include tweaks to the layout of the fake phone call menu (i.e. two spinners for voice and wait time) and renaming of variables and files for consistency.

--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
         <activity android:name=".ForgotUsernameActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".ResourceActivity" />
-        <activity android:name=".Fake_Phone_Call_Menu_Activity" />
-        <activity android:name=".Fake_Phone_Call_Activity" />
+        <activity android:name=".FakePhoneCallMenuActivity" />
+        <activity android:name=".CallingActivity" />
     </application>
 
 </manifest>
