--- a/care-corner-api/package.json
+++ b/care-corner-api/package.json
@@ -13,5 +13,8 @@
     "node": "14.15.5",
     "npm": "7.5.4",
     "yarn": "1.22.10"
+  },
+  "devDependencies": {
+    "serverless-localstack": "^0.4.28"
   }
 }
