journal recyclerview adapter and template working correctly(not finished yet, need to change to add/delete files to it)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
         <activity android:name=".FakePhoneCallMenuActivity" />
         <activity android:name=".CallingActivity" />
         <activity android:name=".JournalMenuActivity" />
+        <activity android:name=".JournalRecyclerMain" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
