Configure serverless localstack integration.

--- a/care-corner-api/serverless-api-java/serverless.yml
+++ b/care-corner-api/serverless-api-java/serverless.yml
@@ -56,20 +56,20 @@ functions:
           path: /panic
           method: post
 
-#plugins: 
-#  - serverless-localstack
+plugins:
+  - serverless-localstack
 
-#custom:
-#  localstack:
-#    stages:
-#      - local
-#    host: http://localhost
-#    edgePort: 4566
-#    autostart: true
-#    lambda: 
-#      mountCode: True
-#    docker: 
-#      sudo: False
+custom:
+  localstack:
+    stages:
+      - local
+    host: http://localhost
+    edgePort: 4566
+    autostart: true
+    lambda:
+      mountCode: True
+    docker:
+      sudo: False
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
