Add an api path in front of the route.

--- a/care-corner-api/serverless-api-java/serverless.yml
+++ b/care-corner-api/serverless-api-java/serverless.yml
@@ -52,7 +52,7 @@ functions:
     handler: com.carecorner.PanicHandler
     events:
       - http:
-          path: /panic
+          path: /api/panic
           method: post
 
 plugins:
