--- a/care-corner-api/docker-compose.yml
+++ b/care-corner-api/docker-compose.yml
@@ -1,42 +1,21 @@
-version: '3.9'
-services:
-  api:
-    build: .
-    container_name: care-corner-api
-    depends_on:
-      - localstack
-    tty: true
-    restart: always
-    networks:
-      - docker_network
-    volumes:
-      - "./serverless-api/:/care-corner-api"
+version: '2.1'
 
+services:
   localstack:
-    image: localstack/localstack:0.12.7
+    image: localstack/localstack
     ports:
-      - "4566:4566"
+      - "4567-4597:4567-4597"
       - "8080:8080"
-    container_name: care-corner-localstack
     environment:
-      - SERVICES= apigateway, lambda, s3, cloudformation, sts, iam, sns
+      - SERVICES=
       - DEFAULT_REGION=us-east-1
       - AWS_XRAY_SDK_ENABLED=true
-      - DEBUG=1
+      - DEBUG=${DEBUG- }
       - DATA_DIR=${DATA_DIR- }
       - PORT_WEB_UI=${PORT_WEB_UI- }
       - LAMBDA_EXECUTOR=docker
-      - LAMBDA_REMOTE_DOCKER=true
+      - LAMBDA_REMOTE_DOCKER=false
       - DOCKER_HOST=unix:///var/run/docker.sock
-      - AWS_ACCESS_KEY_ID=foobar
-      - AWS_SECRET_ACCESS_KEY=foobar
-      - HOSTNAME=localstack
     volumes:
       - "${TMPDIR:-/tmp/localstack}:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
-    networks:
-      - docker_network
-
-networks:
-  docker_network:
-    driver: bridge
