--- a/care-corner-api/docker-compose.yml
+++ b/care-corner-api/docker-compose.yml
@@ -1,21 +1,23 @@
-version: '2.1'
+version: '3.5'
 
 services:
   localstack:
-    image: localstack/localstack
+    image: localstack/localstack:0.12.7
     ports:
-      - "4567-4597:4567-4597"
+      - "4566-4599:4566-4599"
       - "8080:8080"
     environment:
-      - SERVICES=
+      - SERVICES=apigateway,lambda,s3
       - DEFAULT_REGION=us-east-1
       - AWS_XRAY_SDK_ENABLED=true
-      - DEBUG=${DEBUG- }
+      - DEBUG=1
       - DATA_DIR=${DATA_DIR- }
       - PORT_WEB_UI=${PORT_WEB_UI- }
       - LAMBDA_EXECUTOR=docker
       - LAMBDA_REMOTE_DOCKER=false
       - DOCKER_HOST=unix:///var/run/docker.sock
+      - AWS_ACCESS_KEY_ID=foobar
+      - AWS_SECRET_ACCESS_KEY=foobar
     volumes:
       - "${TMPDIR:-/tmp/localstack}:/tmp/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
