Set debug on for local stack serverless.

--- a/care-corner-api/serverless-api-java/serverless.yml
+++ b/care-corner-api/serverless-api-java/serverless.yml
@@ -33,6 +33,7 @@ custom:
     host: http://localhost
     edgePort: 4566
     autostart: true
+    debug: true
     lambda:
       mountCode: True
     docker:
