--- a/care-corner-api/docker-compose.yml
+++ b/care-corner-api/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "4566-4599:4566-4599"
       - "8080:8080"
     environment:
-      - SERVICES=apigateway,lambda,s3,cloudformation,sts,iam
+      - SERVICES= apigateway, lambda, s3, cloudformation, sts, iam, sns
       - DEFAULT_REGION=us-east-1
       - AWS_XRAY_SDK_ENABLED=true
       - DEBUG=1
