Change moutcode to false, slower but Java fails deploying otherwise.

--- a/care-corner-api/serverless-api-java/serverless.yml
+++ b/care-corner-api/serverless-api-java/serverless.yml
@@ -32,10 +32,10 @@ custom:
       - local
     host: http://localhost
     edgePort: 4566
-    autostart: true
     debug: true
     lambda:
-      mountCode: True
+      # setting to true would improve performance, but fails with Java
+      mountCode: False
     docker:
       sudo: False
 
