--- a/care-corner-api/Dockerfile
+++ b/care-corner-api/Dockerfile
@@ -9,14 +9,6 @@ RUN apt-get update && \
     unzip && \
     rm -rf /var/lib/apt/lists/*
 
-ARG USER_UID="2000"
-ARG USER_GID="2000"
-ARG USER_NAME="care"
-RUN groupadd -g $USER_GID care && \
-    useradd -m -g $USER_GID -u $USER_UID $USER_NAME
-
-USER $USER_UID:$USER_GID
-
 # awscli and awslocal
 RUN pip install awscli-local[ver1]
 
@@ -33,15 +25,14 @@ RUN bash -c "source $HOME/.sdkman/bin/sdkman-init.sh && \
 # serverless framework
 RUN curl -o- -L https://slss.io/install | VERSION=2.28.7 bash
 
-
 FROM builder 
 
-WORKDIR /usr/src/app
-COPY package.json yarn.lock /usr/src/app/
+WORKDIR $HOME/care-corner-api
+COPY package.json yarn.lock $HOME/care-corner-api/
 
 RUN yarn
 
-COPY . /usr/src/app
+COPY . $HOME/care-corner-api
 
 CMD [ "/bin/bash" ]
 
