--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.android.support:appcompat-v7:30.0.3'
     implementation 'com.android.support:recyclerview-v7:30.0.3'
+    testCompile "org.robolectric:robolectric:3:3:2"
 
 }
