Rework Journal Recycler Main Activity Functionality
This was somewhat of a large update, but a lot of similar code exists from before, but it may have been moved around since then. Also adds Journal and Add Journal Entry Dialog Classes.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".CallingActivity" />
         <activity android:name=".JournalMenuActivity" />
         <activity android:name=".JournalRecyclerMain" />
-
+        <activity android:name=".JournalEditorActivity" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
