--- a/care-corner-api/serverless-api/serverless.yml
+++ b/care-corner-api/serverless-api/serverless.yml
@@ -30,7 +30,7 @@ custom:
   localstack:
     stages:
       - local
-    host: http://localhost
+    host: http://localstack
     edgePort: 4566
     debug: true
     lambda:
