Mount the local repo so code changes in host are reflected.

--- a/care-corner-api/docker-compose.yml
+++ b/care-corner-api/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     restart: always
     networks:
       - docker_network
+    volumes:
+      - "./serverless-api/:/care-corner-api"
 
   localstack:
     image: localstack/localstack:0.12.7
