--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.android.support:appcompat-v7:30.0.3'
     implementation 'com.android.support:recyclerview-v7:30.0.3'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
