--- a/care-corner-mobile/app/build.gradle
+++ b/care-corner-mobile/app/build.gradle
@@ -5,6 +5,11 @@ plugins {
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 
     defaultConfig {
         applicationId "com.carecorner"
@@ -33,12 +38,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation 'com.android.support:appcompat-v7:30.0.3'
-    implementation 'com.android.support:recyclerview-v7:30.0.3'
+    testImplementation 'org.robolectric:robolectric:4.4'
+    testImplementation 'org.hamcrest:hamcrest:2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
 }
