Create a basic resources api endpoint to demo and set example.

--- a/care-corner-api/serverless-api/serverless.yml
+++ b/care-corner-api/serverless-api/serverless.yml
@@ -22,6 +22,13 @@ functions:
       - http:
           path: /api/panic
           method: post
+  resource:
+    handler: com.carecorner.ResourceHandler
+    events:
+      - http:
+          path: /api/resources
+          method: get
+
 plugins:
   - serverless-localstack
 
