FPC_EmulatedVoice Added EmulatedVoiceService to the manifest

--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ResourceActivity" />
         <activity android:name=".FakePhoneCallMenuActivity" />
         <activity android:name=".CallingActivity" />
+        <service android:name="EmulatedVoiceService" />
     </application>
 
 </manifest>
