--- a/care-corner-api/serverless-api/pom.xml
+++ b/care-corner-api/serverless-api/pom.xml
@@ -81,9 +81,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>dbunit</groupId>
+      <groupId>org.dbunit</groupId>
       <artifactId>dbunit</artifactId>
-      <version>2.2</version>
+      <version>2.7.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
