--- a/care-corner-api/serverless-api/src/main/resources/application.yml
+++ b/care-corner-api/serverless-api/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 datasource:
   driverClassName: com.mysql.jdbc.Driver
-  url: jdbc:mysql://127.0.01:3306/care-corner
+  url: jdbc:mysql://localhost:3306/care-corner
   username: care
   password: corner
