--- a/care-corner-mobile/app/build.gradle
+++ b/care-corner-mobile/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
