Update Gradle Build to include Jetpack and Material Component. added hands.png

--- a/care-corner-mobile/app/build.gradle
+++ b/care-corner-mobile/app/build.gradle
@@ -44,4 +44,12 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.4'
     testImplementation 'org.hamcrest:hamcrest:2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
+
+    //Material Design Component
+    implementation 'com.google.android.material:material:1.4.0-alpha02'
+
+    //JetPack Navigation
+    def nav_version = "2.3.4"
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
 }
