--- a/care-corner-mobile/app/build.gradle
+++ b/care-corner-mobile/app/build.gradle
@@ -3,6 +3,11 @@ plugins {
 }
 
 android {
+    useLibrary 'android.test.runner'
+
+    useLibrary 'android.test.base'
+    useLibrary 'android.test.mock'
+
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
     testOptions {
@@ -39,9 +44,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'com.google.truth:truth:1.1.2'
+    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'junit:junit:4.+'
     testImplementation 'org.robolectric:robolectric:4.4'
     testImplementation 'org.hamcrest:hamcrest:2.2'
     implementation 'com.google.code.gson:gson:2.8.6'
