--- a/care-corner-api/docker-compose.yml
+++ b/care-corner-api/docker-compose.yml
@@ -32,7 +32,7 @@ services:
         ipv4_address: 10.5.0.6
 
   localstack:
-    image: localstack/localstack:0.12.8
+    image: localstack/localstack:0.12.9.1
     container_name: care-corner-localstack
     ports:
       - '4566:4566'
@@ -50,6 +50,7 @@ services:
       - AWS_ACCESS_KEY_ID=foobar
       - AWS_SECRET_ACCESS_KEY=foobar
       - HOSTNAME=localstack
+      - HOSTNAME_EXTERNAL=localstack
     volumes:
       - "${TMPDIR:-/tmp/localstack}:/tmp/localstack"
       - '/var/run/docker.sock:/var/run/docker.sock'
