--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.CareCorner">
-
         <activity android:name=".DialingActivity"></activity>
         <activity android:name=".WelcomeActivity">
             <intent-filter>
