Setup a nginx proxy for android API access.

--- a/care-corner-api/docker-compose.yml
+++ b/care-corner-api/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     depends_on:
       - localstack
       - database
+      - proxy
     tty: true
     restart: always
     networks:
@@ -31,11 +32,24 @@ services:
       docker_network:
         ipv4_address: 10.5.0.6
 
+  proxy:
+    build: ./proxy/.
+    container_name: care-corner-proxy
+    restart: always
+    ports:
+      - '8888:8888'
+    networks:
+      docker_network:
+        ipv4_address: 10.5.0.8
+
+
   localstack:
     image: localstack/localstack:0.12.9.1
     container_name: care-corner-localstack
+    restart: always
+    depends_on:
+      - proxy
     ports:
-      - '4566:4566'
       - '8080:8080'
     environment:
       - SERVICES= apigateway, lambda, s3, cloudformation, sts, iam, sns
