--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.CareCorner">
+        <service
+            android:name=".RecorderService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity android:name=".RecordingsActivity">
             android:exported="true"
             <intent-filter>
