--- a/care-corner-api/serverless-api/build.gradle
+++ b/care-corner-api/serverless-api/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -36,5 +37,10 @@ task buildZip(type: Zip) {                                                      
         from configurations.runtimeClasspath
     }
 }
+
+shadowJar{
+  transform(com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer)
+}
+
 
 build.dependsOn buildZip
