Added mombot to manifest - thanks Gustin.

--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".JournalEditorActivity" />
         <activity android:name=".JournalReader" />
         <activity android:name=".SafeWalkMenuActivity" />
+        <activity android:name=".MombotActivity" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
