journal login initial commit

--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
         <activity android:name=".CallingActivity" />
 
         <service android:name=".EmulatedVoiceService" />
-
+        <activity android:name=".JournalLogin"/>
         <activity android:name=".JournalMenuActivity" />
         <activity android:name=".JournalRecyclerMain" />
         <activity android:name=".JournalEditorActivity" />
