--- a/care-corner-api/serverless-api/serverless.yml
+++ b/care-corner-api/serverless-api/serverless.yml
@@ -22,6 +22,12 @@ functions:
       - http:
           path: /api/auth
           method: post
+  journey:
+      handler: com.carecorner.handler.LocationHandler
+      events:
+        - http:
+            path: /api/journey
+            method: post
   panic:
     handler: com.carecorner.handler.PanicHandler
     events:
