--- a/care-corner-api/serverless-api/build.gradle
+++ b/care-corner-api/serverless-api/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.23'
     implementation 'com.zaxxer:HikariCP:4.0.3'
     implementation 'org.yaml:snakeyaml:1.28'
+    implementation 'com.twilio.sdk:twilio:8.10.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.dbunit:dbunit:2.7.0'
     testImplementation 'com.h2database:h2:1.4.200'
