--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CareCorner"
         android:usesCleartextTraffic="true">
+
+        <!-- HERE SDK Credentials -->
+        <meta-data android:name="com.here.sdk.access_key_id" android:value="TMjbh5l38mKcc4u2MNvubw" />
+        <meta-data android:name="com.here.sdk.access_key_secret" android:value="ccd2bP2JW55WwYkF0IodD1jIW0rPeL-RLrmnS4lmAu9iU96qUGQlxuKD92XBFPgWah7P_anDmvD732YBEDDr2g  " />
+
         <activity android:name=".PanicActivity">
             android:exported="true"
             <intent-filter>
@@ -23,7 +28,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <service
