Putting main menu xml file back

--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
 
         <service android:name=".EmulatedVoiceService" />
         <activity android:name=".JournalLogin"/>
+        <activity android:name=".JournalPinCreation"/>
         <activity android:name=".JournalMenuActivity" />
         <activity android:name=".JournalRecyclerMain" />
         <activity android:name=".JournalEditorActivity" />
