--- a/care-corner-api/serverless-api/build.gradle
+++ b/care-corner-api/serverless-api/build.gradle
@@ -12,6 +12,8 @@ version = 'dev'
 java.sourceCompatibility = JavaVersion.VERSION_11
 
 dependencies {
+	annotationProcessor 'org.projectlombok:lombok:1.18.20'
+  	compileOnly 'org.projectlombok:lombok:1.18.20'
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
     implementation 'com.amazonaws:aws-lambda-java-events:3.1.0'
     implementation 'com.amazonaws:aws-lambda-java-log4j2:1.2.0'
@@ -26,8 +28,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.dbunit:dbunit:2.7.0'
     testImplementation 'com.h2database:h2:1.4.200'
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+	testCompileOnly 'org.projectlombok:lombok:1.18.20'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
 
 task buildZip(type: Zip) {                                                                                      // Using the Zip API from gradle to build a zip file of all the dependencies                                //
