added IncidentListService.java to load and save incident_list Vector. also added Incident_List_README.md to the app folder as a quick tutorial to use it.

--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -67,6 +67,10 @@
         <activity android:name=".JournalEditorActivity" />
         <activity android:name=".JournalReader" />
         <activity android:name=".SafeWalkMenuActivity" />
+        <service
+            android:name=".IncidentListService"
+            android:enabled="true"
+            android:exported="true" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
