--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -71,7 +71,14 @@
             android:name=".IncidentListService"
             android:enabled="true"
             android:exported="true" />
-        <activity android:name=".ReportingActivity" />
+        <activity android:name=".ReportingActivity" >
+            android:exported="true"
+            <intent-filter>
+                <action android:name="android.intent.action.RECORDINGS" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ReportingReader" />
         <activity android:name=".MombotActivity" />
         <meta-data
