--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -66,7 +66,14 @@
         <activity android:name=".JournalRecyclerMain" />
         <activity android:name=".JournalEditorActivity" />
         <activity android:name=".JournalReader" />
-        <activity android:name=".SafeWalkMenuActivity" />
+        <activity android:name=".SafeWalkMenuActivity" >
+            android:exported="true"
+            <intent-filter>
+                <action android:name="android.intent.action.RECORDINGS" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <service
             android:name=".IncidentListService"
             android:enabled="true"
