--- a/care-corner-mobile/app/src/main/AndroidManifest.xml
+++ b/care-corner-mobile/app/src/main/AndroidManifest.xml
@@ -67,8 +67,8 @@
         <activity android:name=".JournalEditorActivity" />
         <activity android:name=".JournalReader" />
         <activity android:name=".MombotActivity"/>
-        <activity android:name=".SettingsActivity"/>
-        <activity android:name=".SafeWalkMenuActivity" >
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".SafeWalkMenuActivity" android:exported="true" >
             android:exported="true"
             <intent-filter>
                 <action android:name="android.intent.action.RECORDINGS" />
